--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Player List</a>
+          <a class="dropdown-item" href="player_list.html">Player List</a>
           <a class="dropdown-item" href="#">News</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Sponsers</a>
