--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<a class="dropdown-item" href="player_list.html">Player List</a>
 							<a class="dropdown-item" href="#">News</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Sponsers</a>
+							<a class="dropdown-item" href="sponsors.html">Sponsors</a>
 						</div>
 					</li>
 
